fix gap spacing

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -60,7 +60,6 @@ input {
     color: var(--yc-error-color) !important;
     font-size: 12px;
     font-weight: 600;
-    height: 12px;
   }
 }
 
